--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build:kbs && tsc && vite build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
-    "refresh-kbs": "npm uninstall --force via-keyboards && npm install --force github:the-via/keyboards",
+    "refresh-kbs": "npm uninstall --force via-keyboards && npm install --force github:vunqdx/keyboards",
     "build:azure": "npm run refresh-kbs && npm run build",
     "preview": "vite preview",
     "build:kbs": "via-keyboards public/definitions",
@@ -47,7 +47,7 @@
     "styled-components": "^6.0.0-beta.5",
     "three": "^0.150.1",
     "use-resize-observer": "^9.1.0",
-    "via-keyboards": "github:the-via/keyboards",
+    "via-keyboards": "github:vunqdx/keyboards",
     "wouter": "^2.10.0"
   },
   "devDependencies": {
